...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/alert_offline_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/fragment_main_top_alert_offline_mode"
            android:gravity="center"
            android:visibility="@{!state.networkAvailable}"
...
            app:layout_constraintTop_toBottomOf="@id/alert_offline_mode"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_light"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
...
