...
        <variable
            name="user"
            type="com.example.uitestingproject.domain.user.User" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_detailed_info"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

...
                android:text="@{user.email}"
                app:layout_constraintBottom_toBottomOf="@id/title_email"
                app:layout_constraintStart_toEndOf="@id/title_email"
                app:layout_constraintTop_toTopOf="@id/title_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_git_hub"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="See on github"
                app:layout_constraintBottom_toBottomOf="parent"
...
